Add quite error

--- a/.slack/apps.json
+++ b/.slack/apps.json
@@ -1,7 +1,7 @@
 {
   "apps": {
     "T024F5REZ": {
-      "app_id": "A06UELQK9SL",
+      "app_id": "A06V8AS6A1X",
       "IsDev": false,
       "team_domain": "shift4",
       "team_id": "T024F5REZ"
